// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`checkboxGroup > renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
    >
      <fieldset
        class="styles__g78afx0"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.75rem_xxsmall__mxir935p"
        >
          <div
            class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          >
            <legend
              class="styles_default__f32sl0 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            >
              Label
            </legend>
          </div>
          <div
            class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
          >
            <div
              aria-disabled="false"
              class="styles__g78afx1 styles_default__1pz5vwp1 styles__1pz5vwp0"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="styles_default__1pz5vwp4 styles__1pz5vwp3"
                id="_r_3_"
                name="Checkbox.value-1"
                type="checkbox"
                value="value-1"
              />
              <svg
                class="styles_default__1pz5vwp7 styles__1pz5vwp6"
                fill="none"
                viewBox="0 0 24 24"
              >
                <title>
                  Checkbox.value-1
                </title>
                <g>
                  <rect
                    class="styles__1pz5vwp9"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    class="styles__1pz5vwpa"
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
                style="--_1o893js3: 1;"
              >
                <div
                  class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.25rem_xxsmall__mxir935j"
                >
                  <label
                    class="styles__1pz5vwpc style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                    for="_r_3_"
                  >
                    Checkbox 1
                  </label>
                </div>
              </div>
            </div>
            <div
              aria-disabled="false"
              class="styles__g78afx1 styles_default__1pz5vwp1 styles__1pz5vwp0"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="styles_default__1pz5vwp4 styles__1pz5vwp3"
                id="_r_8_"
                name="Checkbox.value-2"
                type="checkbox"
                value="value-2"
              />
              <svg
                class="styles_default__1pz5vwp7 styles__1pz5vwp6"
                fill="none"
                viewBox="0 0 24 24"
              >
                <title>
                  Checkbox.value-2
                </title>
                <g>
                  <rect
                    class="styles__1pz5vwp9"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    class="styles__1pz5vwpa"
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
                style="--_1o893js3: 1;"
              >
                <div
                  class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.25rem_xxsmall__mxir935j"
                >
                  <label
                    class="styles__1pz5vwpc style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                    for="_r_8_"
                  >
                    Checkbox 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkboxGroup > renders correctly with direction row 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
    >
      <fieldset
        class="styles__g78afx0"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.75rem_xxsmall__mxir935p"
        >
          <div
            class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          >
            <legend
              class="styles_default__f32sl0 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            >
              Label
            </legend>
          </div>
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_gap_1rem_xxsmall__mxir933v"
          >
            <div
              aria-disabled="false"
              class="styles__g78afx1 styles_default__1pz5vwp1 styles__1pz5vwp0"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="styles_default__1pz5vwp4 styles__1pz5vwp3"
                id="_r_t_"
                name="Checkbox.value-1"
                type="checkbox"
                value="value-1"
              />
              <svg
                class="styles_default__1pz5vwp7 styles__1pz5vwp6"
                fill="none"
                viewBox="0 0 24 24"
              >
                <title>
                  Checkbox.value-1
                </title>
                <g>
                  <rect
                    class="styles__1pz5vwp9"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    class="styles__1pz5vwpa"
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
                style="--_1o893js3: 1;"
              >
                <div
                  class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.25rem_xxsmall__mxir935j"
                >
                  <label
                    class="styles__1pz5vwpc style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                    for="_r_t_"
                  >
                    Checkbox 1
                  </label>
                </div>
              </div>
            </div>
            <div
              aria-disabled="false"
              class="styles__g78afx1 styles_default__1pz5vwp1 styles__1pz5vwp0"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="styles_default__1pz5vwp4 styles__1pz5vwp3"
                id="_r_12_"
                name="Checkbox.value-2"
                type="checkbox"
                value="value-2"
              />
              <svg
                class="styles_default__1pz5vwp7 styles__1pz5vwp6"
                fill="none"
                viewBox="0 0 24 24"
              >
                <title>
                  Checkbox.value-2
                </title>
                <g>
                  <rect
                    class="styles__1pz5vwp9"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    class="styles__1pz5vwpa"
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
                style="--_1o893js3: 1;"
              >
                <div
                  class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.25rem_xxsmall__mxir935j"
                >
                  <label
                    class="styles__1pz5vwpc style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                    for="_r_12_"
                  >
                    Checkbox 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkboxGroup > renders correctly with error content 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
    >
      <fieldset
        aria-describedby="_r_1m_"
        class="styles__g78afx0"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.75rem_xxsmall__mxir935p"
        >
          <div
            class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          >
            <legend
              class="styles_default__f32sl0 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            >
              Label
            </legend>
          </div>
          <div
            class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
          >
            <div
              aria-disabled="false"
              class="styles__g78afx1 styles_default__1pz5vwp1 styles__1pz5vwp0"
              data-checked="false"
              data-error="true"
            >
              <input
                aria-checked="false"
                aria-invalid="true"
                class="styles_default__1pz5vwp4 styles__1pz5vwp3"
                id="_r_1p_"
                name="Checkbox.value-1"
                type="checkbox"
                value="value-1"
              />
              <svg
                class="styles_default__1pz5vwp7 styles__1pz5vwp6"
                fill="none"
                viewBox="0 0 24 24"
              >
                <title>
                  Checkbox.value-1
                </title>
                <g>
                  <rect
                    class="styles__1pz5vwp9"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    class="styles__1pz5vwpa"
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
                style="--_1o893js3: 1;"
              >
                <div
                  class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.25rem_xxsmall__mxir935j"
                >
                  <label
                    class="styles__1pz5vwpc style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                    for="_r_1p_"
                  >
                    Checkbox 1
                  </label>
                </div>
              </div>
            </div>
            <div
              aria-disabled="false"
              class="styles__g78afx1 styles_default__1pz5vwp1 styles__1pz5vwp0"
              data-checked="false"
              data-error="true"
            >
              <input
                aria-checked="false"
                aria-invalid="true"
                class="styles_default__1pz5vwp4 styles__1pz5vwp3"
                id="_r_1u_"
                name="Checkbox.value-2"
                type="checkbox"
                value="value-2"
              />
              <svg
                class="styles_default__1pz5vwp7 styles__1pz5vwp6"
                fill="none"
                viewBox="0 0 24 24"
              >
                <title>
                  Checkbox.value-2
                </title>
                <g>
                  <rect
                    class="styles__1pz5vwp9"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    class="styles__1pz5vwpa"
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
                style="--_1o893js3: 1;"
              >
                <div
                  class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.25rem_xxsmall__mxir935j"
                >
                  <label
                    class="styles__1pz5vwpc style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                    for="_r_1u_"
                  >
                    Checkbox 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
      <span
        class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_danger__1yhcak89 style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_48__1yhcak82m"
        id="_r_1m_"
        role="status"
      >
        Eror content
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkboxGroup > renders correctly with helper content 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
    >
      <fieldset
        aria-describedby="_r_17_"
        class="styles__g78afx0"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.75rem_xxsmall__mxir935p"
        >
          <div
            class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          >
            <legend
              class="styles_default__f32sl0 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            >
              Label
            </legend>
          </div>
          <div
            class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
          >
            <div
              aria-disabled="false"
              class="styles__g78afx1 styles_default__1pz5vwp1 styles__1pz5vwp0"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="styles_default__1pz5vwp4 styles__1pz5vwp3"
                id="_r_1a_"
                name="Checkbox.value-1"
                type="checkbox"
                value="value-1"
              />
              <svg
                class="styles_default__1pz5vwp7 styles__1pz5vwp6"
                fill="none"
                viewBox="0 0 24 24"
              >
                <title>
                  Checkbox.value-1
                </title>
                <g>
                  <rect
                    class="styles__1pz5vwp9"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    class="styles__1pz5vwpa"
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
                style="--_1o893js3: 1;"
              >
                <div
                  class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.25rem_xxsmall__mxir935j"
                >
                  <label
                    class="styles__1pz5vwpc style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                    for="_r_1a_"
                  >
                    Checkbox 1
                  </label>
                </div>
              </div>
            </div>
            <div
              aria-disabled="false"
              class="styles__g78afx1 styles_default__1pz5vwp1 styles__1pz5vwp0"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="styles_default__1pz5vwp4 styles__1pz5vwp3"
                id="_r_1f_"
                name="Checkbox.value-2"
                type="checkbox"
                value="value-2"
              />
              <svg
                class="styles_default__1pz5vwp7 styles__1pz5vwp6"
                fill="none"
                viewBox="0 0 24 24"
              >
                <title>
                  Checkbox.value-2
                </title>
                <g>
                  <rect
                    class="styles__1pz5vwp9"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    class="styles__1pz5vwpa"
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
                style="--_1o893js3: 1;"
              >
                <div
                  class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.25rem_xxsmall__mxir935j"
                >
                  <label
                    class="styles__1pz5vwpc style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                    for="_r_1f_"
                  >
                    Checkbox 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
      <span
        class="style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
        id="_r_17_"
        role="status"
      >
        Helper content
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkboxGroup > renders correctly with no CheckboxGroup.Checkbox name 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
    >
      <fieldset
        class="styles__g78afx0"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.75rem_xxsmall__mxir935p"
        >
          <div
            class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          >
            <legend
              class="styles_default__f32sl0 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            >
              Label
            </legend>
          </div>
          <div
            class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
          >
            <div
              aria-disabled="false"
              class="styles__g78afx1 styles_default__1pz5vwp1 styles__1pz5vwp0"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="styles_default__1pz5vwp4 styles__1pz5vwp3"
                id="_r_g_"
                name="Checkbox."
                type="checkbox"
                value="value-1"
              />
              <svg
                class="styles_default__1pz5vwp7 styles__1pz5vwp6"
                fill="none"
                viewBox="0 0 24 24"
              >
                <title>
                  Checkbox.
                </title>
                <g>
                  <rect
                    class="styles__1pz5vwp9"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    class="styles__1pz5vwpa"
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
                style="--_1o893js3: 1;"
              >
                <div
                  class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.25rem_xxsmall__mxir935j"
                >
                  <label
                    class="styles__1pz5vwpc style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                    for="_r_g_"
                  >
                    Checkbox 1
                  </label>
                </div>
              </div>
            </div>
            <div
              aria-disabled="false"
              class="styles__g78afx1 styles_default__1pz5vwp1 styles__1pz5vwp0"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="styles_default__1pz5vwp4 styles__1pz5vwp3"
                id="_r_l_"
                name="Checkbox."
                type="checkbox"
                value="value-2"
              />
              <svg
                class="styles_default__1pz5vwp7 styles__1pz5vwp6"
                fill="none"
                viewBox="0 0 24 24"
              >
                <title>
                  Checkbox.
                </title>
                <g>
                  <rect
                    class="styles__1pz5vwp9"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    class="styles__1pz5vwpa"
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
                style="--_1o893js3: 1;"
              >
                <div
                  class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.25rem_xxsmall__mxir935j"
                >
                  <label
                    class="styles__1pz5vwpc style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                    for="_r_l_"
                  >
                    Checkbox 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`checkboxGroup > renders correctly with required prop 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
    >
      <fieldset
        class="styles__g78afx0"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.75rem_xxsmall__mxir935p"
        >
          <div
            class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          >
            <div
              class="styles__mxir930 styles_alignItems_flex-start_xxsmall__mxir93v styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.25rem_xxsmall__mxir935j"
            >
              <legend
                class="styles_default__f32sl0 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
              >
                Label
              </legend>
              <span
                class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_danger__1yhcak89 style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_48__1yhcak82m"
              >
                *
              </span>
            </div>
          </div>
          <div
            class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.5rem_xxsmall__mxir933p"
          >
            <div
              aria-disabled="false"
              class="styles__g78afx1 styles_default__1pz5vwp1 styles__1pz5vwp0"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="styles_default__1pz5vwp4 styles__1pz5vwp3"
                id="_r_2a_"
                name="Checkbox.value-1"
                type="checkbox"
                value="value-1"
              />
              <svg
                class="styles_default__1pz5vwp7 styles__1pz5vwp6"
                fill="none"
                viewBox="0 0 24 24"
              >
                <title>
                  Checkbox.value-1
                </title>
                <g>
                  <rect
                    class="styles__1pz5vwp9"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    class="styles__1pz5vwpa"
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
                style="--_1o893js3: 1;"
              >
                <div
                  class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.25rem_xxsmall__mxir935j"
                >
                  <label
                    class="styles__1pz5vwpc style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                    for="_r_2a_"
                  >
                    Checkbox 1
                  </label>
                </div>
              </div>
            </div>
            <div
              aria-disabled="false"
              class="styles__g78afx1 styles_default__1pz5vwp1 styles__1pz5vwp0"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="styles_default__1pz5vwp4 styles__1pz5vwp3"
                id="_r_2f_"
                name="Checkbox.value-2"
                type="checkbox"
                value="value-2"
              />
              <svg
                class="styles_default__1pz5vwp7 styles__1pz5vwp6"
                fill="none"
                viewBox="0 0 24 24"
              >
                <title>
                  Checkbox.value-2
                </title>
                <g>
                  <rect
                    class="styles__1pz5vwp9"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    class="styles__1pz5vwpa"
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
                style="--_1o893js3: 1;"
              >
                <div
                  class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.25rem_xxsmall__mxir935j"
                >
                  <label
                    class="styles__1pz5vwpc style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
                    for="_r_2f_"
                  >
                    Checkbox 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;
